fixed flex elements, their width and word wraps

--- a/src/sass/_message.scss
+++ b/src/sass/_message.scss
@@ -7,12 +7,13 @@
   margin-bottom: rem(20);
 
   .avatar-l {
-    flex: 1 0 auto;
+    flex: 0 0 auto;
     margin-right: rem(23);
     margin-left: rem(5);
   }
 
   &__content {
+    flex: 1 0 50vw;
     min-width: 47.14vw;
     box-sizing: border-box;
     position: relative;
@@ -158,6 +159,7 @@
 }
 
 .m-content__text {
+  word-wrap: break-word;
   padding: rem(10);
   font-size: rem(14);
 }
